 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/08/06:
   * Fix KDE Dockapps on restart (dont unmap), and some minor tweaks (Simon)
     SystemTray.hh/cc
*07/08/05:
   * When saving window info for rememberm use class name AND instance name,
     AND role if present. (Simon)
     - This should fix firefox/thunderbird issues, but note that mplayer
       (nogui) sets the vo driver name as the instance name.
     Remember.cc
   * Fix menu heading encoding (Simon) 
     sf.net bug #1712583: NLS:Non-latin characters displayed incorrectly in menu title
     MenuCreator.cc
   * Fix error passing --with-locale path in ./configure (Simon)
     sf.net bug #1708859
     configure.in
   * Add missing translation strings (Simon)
     - Thanks tenner (de_*)
     - Thanks bobbens (es_ES)
     - Thanks Guillermo Patterer (es_AR)
     - Thanks me (C/en_US/en_GB)
     - Thanks izhirahider (pt_*)
     ?/Translation.m
   * Fix System Tray restart issues (Simon)
     (including gaim/pidgin crash-on-restart)
     sf.net #1524098, #1633718 (and older?)
     src/SystemTray.hh/cc src/FbTk/FbWindow.hh/cc 
*07/07/31:
   * Change _NET_WM_WINDOW_TYPE_MENU to use TOOL decoration type (Mark)
     Ewmh.cc
*07/07/24:
   * Don't allow ToggleDecor with fullscreen windows, and make it show
     decorations for windows that don't have a titlebar by default (Mark)
     Window.cc/hh
*07/07/08:
   * Clean up state and workspace window properties on client close (Mark)
     Ewmh.cc Gnome.cc/hh
*07/07/07:
   * Don't overwrite changes to init file on reconfigure (Mark)
     Workspace.cc fluxbox.cc/hh
   * Make things work a little better with configure script's --program-prefix
     and --program-suffix options (Mark)
   * Allow negative numbers in :Workspace <int> command, which counts backwards
     from the last one (Mark)
   * Right clicking on a submenu didn't revert focus to its parent (Mark)
     FbTk/Menu.cc/hh
   * Pressing escape in a torn menu didn't work (Mark)
     FbTk/Menu.cc